<resources>
    <string name="app_name">HealthManager</string>
    <string name="textview">TextView</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_in">登录</string>
    <string name="tv_register">注册</string>
    <string name="et_username">账号</string>
    <string name="terms_for_usage">《使用条款》</string>
    <string name="bt_common_login">登 录</string>
    <string name="bn_forget_password">忘记密码?</string>
    <string name="iv_return">return to exit</string>
    <string name="btn_logo">logo</string>
</resources>