<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:contentDescription="@string/iv_return"
            android:padding="8dp"
            android:src="@drawable/returnfig"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_in"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_register"
            android:textColor="#404040"
            android:padding="8dp"
            android:textSize="14sp" />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="#e5e5e5" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/btn_logo"
            android:src="@drawable/applogo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#07a6e6" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal" >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/personimage" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/et_username"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#d9d9d9"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal" >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/passwordfig" />
            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="密码"
                android:inputType="textPassword"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:background="@null"
                android:textSize="14sp"
                android:importantForAutofill="no" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="登录或者注册表示同意"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_termOfService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_for_usage"
            android:textColor="#63d065"
            android:textSize="13sp" />
    </LinearLayout>
    <Button
        android:id="@+id/bt_common_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/bt_common_login"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp" />
    <Button
        android:id="@+id/bn_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/bn_forget_password"
        android:background="@null"
        android:textColor="#4ebeea"
        android:textSize="13sp"
        android:layout_gravity="right"
        android:layout_marginRight="42dp" />
</LinearLayout>